chore: add vendoring

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cosmic-applibrary (0.1.0) UNRELEASED; urgency=medium
+cosmic-app-library (0.1.0) UNRELEASED; urgency=medium
 
   * Initial release.
 
